k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: next
  labels:
    app: next
    service: next
spec:
  ports:
  - name: http
    port: 8010
    targetPort: 3000
  selector:
    app: next
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next
spec:
  replicas: 1
  selector:
    matchLabels:
      app: next
      version: v1
  template:
    metadata:
      labels:
        app: next
        version: v1
    spec:
      serviceAccountName: next
      containers:
      - image: gcr.io/test-1-300600/blog-customer:v0.0.5
        imagePullPolicy: IfNotPresent
        name: next
        ports:
        - containerPort: 3000
