k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: next-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - thedummydogo.com
    - www.thedummydogo.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: next
spec:
  hosts:
  - thedummydogo.com
  - www.thedummydogo.com
  gateways:
  - next-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8010
        host: next
